# BlockWorld

./: README.md  readme.md
block_world_with_wgpu/: .gitignore  Cargo.toml
block_world_with_wgpu/assets/fonts/: Minecraft.fnt
block_world_with_wgpu/assets/shader/chunk/: fragment.shader  fragment.shader.spirv  vertex.shader  vertex.shader.spirv
block_world_with_wgpu/assets/shader/color/: vertex.shader
block_world_with_wgpu/assets/shader/line_mesh/: fragment.shader.spirv  vertex.shader  vertex.shader.spirv
block_world_with_wgpu/src/: main.rs
block_world_with_wgpu/src/block/: block_ray.rs  block_registry.rs  block_sides.rs  block_type.rs  line_mesh.rs  line_mesh_renderer.rs  line_mesh_renderer_pipeline.rs  location.rs  mod.rs  texture_coords.rs
block_world_with_wgpu/src/data/: load.rs  save.rs
block_world_with_wgpu/src/gui/: debug_gui.rs  mod.rs  pause_gui.rs
block_world_with_wgpu/src/gui/inventory/: hot_bar_inv.rs  inventory.rs  mod.rs  slot.rs
block_world_with_wgpu/src/player/: player.rs
block_world_with_wgpu/src/scene/: game_init_scene.rs  in_game_scene.rs  loading_scene.rs  main_menu_scene.rs  mod.rs  saving_scene.rs  world_loading_scene.rs
block_world_with_wgpu/src/vertex/: chunk_vertex.rs  chunk_vertex_buffer.rs  chunk_vertex_buffer_data.rs  mod.rs
block_world_with_wgpu/src/world/: mod.rs  world.rs
block_world_with_wgpu/src/world/biome/: biome_registry.rs  biome_selector.rs  biome_type.rs  mod.rs
block_world_with_wgpu/src/world/chunk/: chunk.rs  chunk_handler.rs  chunk_mesh.rs  chunk_render_pipeline.rs  chunk_renderer.rs  draw_chunk.rs  (+3 more)
(+4 files in other folders)
